# toy-cpupathtracing

./: .gitmodules  CMakeLists.txt
logger/: CMakeLists.txt  log.cpp  log.hpp
samples/sample01/: CMakeLists.txt  main.cpp
samples/sample02/: CMakeLists.txt  main.cpp
samples/sandbox/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/include/: camera.hpp  film.hpp  frame.hpp  material.hpp  model.hpp  ray.hpp  rgb.hpp  scene.hpp  thread_pool.hpp
source/include/accelerate/: bound.hpp  bvh.hpp  scene_bvh.hpp
source/include/camera/: camera.hpp  film.hpp  ray.hpp
source/include/geometry/: plane.hpp  shape.hpp  sphere.hpp  triangle.hpp
source/include/material/: dielectric_material.hpp  diffuse_material.hpp  grid_ground_material.hpp  material.hpp  specular_material.hpp
source/include/model/: material.hpp  model.hpp  scene.hpp
source/include/renderers/: baserenderer.hpp  debug_renderer.hpp  normal_renderer.hpp  pathtracing_renderer.hpp  simple_rt_renderer.hpp
source/include/sampler/: spherical.hpp
source/include/thread/: spin_lock.hpp  thread_pool.hpp
source/include/util/: algorithm.hpp  debug_macro.hpp  frame.hpp  profile.hpp  progress.hpp  rgb.hpp
source/src/: camera.cpp  film.cpp  frame.cpp  main.cpp  material.cpp  model.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  thread_pool.cpp
source/src/accelerate/: bound.cpp  bvh.cpp  scene_bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/geometry/: plane.cpp  sphere.cpp  triangle.cpp
source/src/material/: dielectric_material.cpp  diffuse_material.cpp  grid_ground_material.cpp  specular_material.cpp
source/src/model/: material.cpp  model.cpp  scene.cpp
source/src/renderers/: baserenderer.cpp  debug_renderer.cpp  normal_renderer.cpp  pathtracing_renderer.cpp  simple_rt_renderer.cpp
source/src/thread/: thread_pool.cpp
source/src/util/: frame.cpp
